--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,8 +34,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
+  <key>UISupportedInterfaceOrientations~ipad</key>
+  <array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
@@ -43,7 +43,11 @@
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
+  <key>UIApplicationSupportsIndirectInputEvents</key>
+  <true/>
+  <key>NSCameraUsageDescription</key>
+  <string>Camera access is required for QR scanning.</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Location is used to show nearby services.</string>
 </dict>
 </plist>
