--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   dio: ^5.4.3+1
   pretty_dio_logger: ^1.3.1
   connectivity_plus: ^6.0.3
+  url_launcher: ^6.3.0
+
+  # Device & app info
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
+  logger: ^2.0.2
 
   # UI/UX Components
   flutter_screenutil: ^5.9.0
@@ -54,6 +60,8 @@ dependencies:
   # Date & Time
   intl: ^0.19.0
   table_calendar: ^3.0.9
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,6 +74,8 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.9
   json_serializable: ^6.8.0
+  integration_test:
+    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -84,6 +94,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
